--- a/asset/css/base.css
+++ b/asset/css/base.css
@@ -49,18 +49,201 @@ reponsive */
 .grid__row {
   display: flex;
   flex-wrap: wrap;
-  margin-left: -12px;
-  margin-right: -12px;
+  margin-left: -5px;
+  margin-right: -5px;
 }
 
 /* test */
 .grid__collumn-2{
-  padding-left: 12px;
-  padding-right: 12px;
+  padding-left: 5px;
+  padding-right: 5px;
   width: 16.6667%;
 }
+.grid__collumn-2-4{
+  padding-left: 5px;
+  padding-right: 5px;
+  width: 20%;
+}
 .grid__collumn-10{
-  padding-left: 12px;
-  padding-right: 12px;
+  padding-left: 5px;
+  padding-right: 5px;
   width: 83.3333%;
+}
+
+
+/* Selection */
+.select-input{
+  position: relative;
+  min-width: 180px;
+  height: 34px;
+  padding: 0 12px;
+  border-radius: 2px;
+  background-color: var(--white-color);
+  display: flex;
+  align-items: center;
+  /* cho 2 thang cach xa nhau */
+  justify-content: space-between;
+}
+.select-input__label{
+  font-size: 1.4rem;
+}
+.select-input__icon{
+  font-size: 1.4rem;
+  color: rgb(131, 131, 131);
+  position: relative;
+  top: 1px;
+}
+.select-input:hover .select-input__list{
+  display: block;
+}
+.select-input__list{
+  position: absolute;
+  left: 0;
+  right: 0;
+  top:100%;
+  border-radius: 2px;
+  background-color: var(--white-color);
+  padding: 8px 16px;
+  list-style: none;
+  display: none;
+  z-index: 1;
+}
+.select-input__link{
+  font-size: 1.4rem;
+  color: var(--text-color);
+  text-decoration: none;
+  display: block;
+  padding: 5px 0;
+}
+.select-input__link:hover{
+  color: var(--primary-color);
+}
+
+/*pagination*/
+.pagination{
+  display: flex;
+  /*can ca giua doc ngang*/
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+}
+.pagination-item{
+  margin: 0 12px;
+}
+.pagination-item--active .pagination-item__link{
+  color: var(--white-color);
+  background-color: var(--primary-color);
+}
+.pagination-item--active .pagination-item__link:hover{
+  background-color: var(--second-color);
+}
+
+.pagination-item__link{
+  --height:30px;
+  display: block;
+  text-decoration: none;
+  font-size: 2rem;
+  font-weight: 300;
+  color: #939393;
+  min-width: 40px;
+  height: var(--height);
+  /*can giua chieu doc*/
+  line-height: var(--height);
+  /*can giua chieu ngang*/
+  text-align: center;
+  border-radius: 2px;
+}
+ /*responsive*/
+@media screen and (max-width: 1483px) {
+  .navbar-fixed {
+    padding: 0 0;
+    min-width: 970px;
+  }
+}
+
+@media screen and (max-width: 1310px) {
+  .header__navbar {
+    flex-direction: row-reverse;
+  }
+  .header__navbar ul:first-child {
+    display: none;
+  }
+  .header__navbar ul:not(:first-child) {
+    float: right;
+    padding-right: 12px;
+  }
+  .header__logo {
+    width: 350px;
+    padding-right: 30px;
+  }
+  .logo {
+    padding-left: 0;
+    font-size: 25px;
+  }
+}
+@media screen and (max-width: 1264px) {
+  .header__search {
+    width: 150px;
+  }
+  .header__logo {
+    padding-right: 18px;
+  }
+}
+@media screen and (max-width: 1059px) {
+  .navbar ul {
+    margin-right: 0px;
+  }
+  .header__cart-wrap {
+    padding: 0 15px 0 0;
+  }
+  .header__cart-icon {
+    font-size: 1.8rem;
+    padding-right: 0px;
+    margin-top: 25px;
+  }
+  .header__cart-list {
+    top: 64px;
+    right: 5px;
+  }
+  .header__cart-notice {
+    padding: 1px 5px;
+    font-size: 1.1rem;
+    line-height: 1.1rem;
+    top: 14px;
+    right: 3px;
+  }
+
+}
+/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
+@media screen and (max-width: 10px) {
+  .header__navbar,
+  .main_nav
+  div:not(:first-child):not(.header__cart):not(.dropdown):not(.dropdown-content),
+  .main_nav ul {
+    display: none;
+  }
+  .navbar .dropdown {
+    float: right;
+    display: block;
+  }
+  .navbar .logo {
+    font-size: 20px;
+    line-height: 20px;
+  }
+  .header {
+    height: 40px;
+  }
+  .header-with-search {
+    height: 60px;
+  }
+  .header__logo {
+    padding-right: 0px;
+  }
+  .header__cart-icon {
+    margin-top: 0;
+    padding-left: 15px;
+    padding-right: 15px;
+    font-size: 8px;
+    padding-top: 6px;
+  }
 }
