--- a/asset/css/slideshow.css
+++ b/asset/css/slideshow.css
@@ -1,6 +1,7 @@
 .slideshow{
     width: 100%;
     height: 100vh;
+    max-width: 1700px;
     position: relative;
     /* an nhung thang con nam ngoai */
     overflow: hidden;
@@ -41,10 +42,10 @@
     transform: translateY(-50%);
     background-color: rgba(0, 0, 0, .8);
     color: #fff;
-    padding: 1.5rem 2.8rem;
+    padding: 2.8rem 4rem;
 }
 .slideshow-item-text h5{
-    font-size: 2rem;
+    font-size: 3rem;
     font-family: 'Raleway', sans-serif;
     /* viet hoa */
     text-transform: uppercase;
@@ -61,15 +62,24 @@
     font-weight: 300;
 }
 @keyframes cycleImages{
-    25%{
+    27%{
         opacity: 1;
     }
-    40%{
+    60%{
         opacity: 0;
     }
 }
 @keyframes zoom{
     100%{
         transform: scale(1.2);
+    }
+}
+@media screen and (max-width: 1000px){
+    .slideshow-item-text{
+        max-width: 70%;
+        padding: 1.5px 2px;
+    }
+    .slideshow-item-text h5{
+        font-size: 1.9rem;
     }
 }
