--- a/asset/css/category_home.css
+++ b/asset/css/category_home.css
@@ -25,7 +25,8 @@
 }
 .section-category-item__two:hover{
     transform: translateY(-3px);
-    box-shadow: 0 1px 20px 0 rgba(0, 0, 0, 0.3);
+    box-shadow: 1px 1px 20px 0 rgba(0, 0, 0, 0.3);
+    /*z-index: 2;*/
 }
 .section-category-item__grid{
     display: inline-block;
@@ -48,7 +49,7 @@
     height: 100%;
     padding: 0;
     margin: 0;
-    /*overflow-x: hidden;*/
+    overflow-x: hidden;
 }
 .section-category-item{
     display: inline-block;
@@ -57,7 +58,7 @@
 }
 
 .section-category-main{
-    padding: 80px 30px 0 30px;
+    padding: 80px 50px 0 50px;
 }
 .section-category-item__grid-name{
     /*font-size: 1.4rem;*/
