--- a/asset/css/modal.css
+++ b/asset/css/modal.css
@@ -161,4 +161,27 @@
   border: none;
   font-weight: bold;
 }
+
+body{
+  position: relative;
+}
+.img-fly-pro{
+  position: absolute;
+  z-index: 999999999;
+  width: 50px;
+  height: 50px;
+  /*hinh anh tu thu nho theo kich thuoc*/
+  object-fit: cover;
+  border-radius: 100%;
+  /*cai dat tat ca thuoc tinh chay trong 1s*/
+  transition: all 0.8s ease;
+  opacity: 0.7;
+  animation: zoomAnimation 1.2s;
+}
+@keyframes zoomAnimation {
+  0%  {transform: scale(0.5)}
+  30%  {transform: scale(1)}
+  60%  {transform: scale(1)}
+  100%  {transform: scale(0.5)}
+}
 /* ------------------------------------------------- */
