--- a/asset/css/sign_up.css
+++ b/asset/css/sign_up.css
@@ -1,8 +1,12 @@
+.sign-up-parent{
+  position: relative;
+}
 .signup{
-  width: 700px;
+  width: 727px;
   background-color: #f5f5f5;
   display: flex;
   margin: 50px auto;
+  border: 1px solid #eee;
 }
 .signup > div {
   width: 50%;
@@ -98,7 +102,7 @@
   margin-bottom: 25px;
 }
 .or {
-  width: 30px;
+  width: 50px;
   height: 30px;
   display: flex;
   align-items: center;
@@ -107,7 +111,7 @@
   background-color: #ddd;
   color: #999;
   position: absolute;
-  top: 50%;
+  top: 60%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
@@ -125,5 +129,5 @@
   display: block;
   text-align: center;
   font-size: 24px;
-  margin-top: 30px;
+  padding-top: 32px;
 }
