--- a/asset/css/slideshow.css
+++ b/asset/css/slideshow.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 100vh;
     max-width: 1700px;
+    max-height: 1000px;
     position: relative;
     /* an nhung thang con nam ngoai */
     overflow: hidden;
