--- a/asset/css/base.css
+++ b/asset/css/base.css
@@ -6,11 +6,11 @@
   --third-color: #009bff;
   --light-text-color: #00f8ff;
   --black-color: #000;
-  --text-color: #333; 
+  --text-color: #333;
   --header-height: 105px;
   --navbar-height: 45px;
   --navbar-with-search-height: calc(
-    var(--header-height) - var(--navbar-height)
+          var(--header-height) - var(--navbar-height)
   );
 }
 * {
@@ -26,6 +26,7 @@ html {
   /* sans sefif(font chu khong co chan) dc tai ve khi roboto khong dc tai ve */
   font-family: "Roboto", sans-serif;
   box-sizing: border-box;
+  background-color: #f5f5f5;
 }
 
 /* 
@@ -155,7 +156,7 @@ reponsive */
   text-align: center;
   border-radius: 2px;
 }
- /*responsive*/
+/*responsive*/
 @media screen and (max-width: 1483px) {
   .navbar-fixed {
     padding: 0 0;
