--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -3,9 +3,12 @@ hr.dashed {
   margin-bottom: 15px;
 }
 .area-title {
-  text-align: center;
-  margin-top: 50px;
-  margin-bottom: 1px;
+  color: #737373;
+  font-size: 2.2rem;
+  line-height: 20px;
+  font-weight: 400;
+  text-transform: uppercase;
+  margin: 18px 0 27px 98px;
 }
 
 .responsive {
