--- a/asset/css/base.css
+++ b/asset/css/base.css
@@ -7,6 +7,7 @@
   --light-text-color: #00f8ff;
   --black-color: #000;
   --text-color: #333;
+  --border-color:#f9f9f9;
   --header-height: 105px;
   --navbar-height: 45px;
   --navbar-with-search-height: calc(
@@ -26,7 +27,7 @@ html {
   /* sans sefif(font chu khong co chan) dc tai ve khi roboto khong dc tai ve */
   font-family: "Roboto", sans-serif;
   box-sizing: border-box;
-  background-color: #f5f5f5;
+  background-color: #C6E6F1;
 }
 
 /* 
