--- a/asset/css/footer.css
+++ b/asset/css/footer.css
@@ -1,7 +1,7 @@
 .footer{
-    border-top: 4px solid var(--primary-color);
-    padding-top: 12px;
-    margin: 30px 0;
+    border-top: 6px solid var(--primary-color);
+    padding-top: 0px;
+    margin: 30px 0 0 0;
 }
 .footer__heading{
     font-size: 1.4rem;
@@ -56,7 +56,6 @@
 .footer__bottom{
     padding: 8px 0;
     background-color: #F5F5F5;
-    margin-top: 36px;
 }
 .footer__text{
     margin: 0;
