--- a/asset/css/contact.css
+++ b/asset/css/contact.css
@@ -18,14 +18,16 @@
 }
 
 .contact__text .section-title h2 {
-    font-size: 48px;
-    margin-bottom: 18px;
+    font-size: 40px;
+    margin-bottom: 10px;
+    color: red;
 }
 
 .contact__text .section-title p {
     color: #707070;
-    line-height: 26px;
-    margin-bottom: 0;
+    margin-top: 10px;
+    line-height: 10px;
+    margin-bottom: 0px;
 }
 
 .contact__text ul li {
@@ -50,12 +52,12 @@
 
 .contact__form input {
     height: 50px;
-    width: 100%;
+    width: 80%;
     border: 1px solid #e1e1e1;
     padding-left: 20px;
     font-size: 15px;
     color: #b7b7b7;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 
 .contact__form input::-webkit-input-placeholder {
@@ -80,13 +82,13 @@
 
 .contact__form textarea {
     height: 150px;
-    width: 100%;
+    width: 80%;
     border: 1px solid #e1e1e1;
     padding-left: 20px;
     padding-top: 12px;
     font-size: 15px;
     color: #b7b7b7;
-    margin-bottom: 24px;
+    margin-bottom: 14px;
     resize: none;
 }
 
@@ -112,6 +114,14 @@
 
 .contact__form button {
     letter-spacing: 4px;
-    padding: 14px 35px;
+    padding: 10px 10px  ;
 }
 
+.clear{
+    clear: both;
+}
+
+.line {
+    height: 1px;
+    width: 100%;
+}
