--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -83,11 +83,11 @@
   padding: 0 8px;
 }
 .header__logo {
-  /* sap xep hang ngang */
-  width: 400px;
-  padding-right: 150px;
-  height: auto;
-  display: inline;
+  width: 167px;
+  cursor: pointer;
+  position: relative;
+  top: 7px;
+  margin-right: 131px;
 }
 .header__search {
   /* chiem het phan chieu ngang con lai */
@@ -95,10 +95,11 @@
   width: 250px;
   height: 40px;
   background-color: var(--white-color);
-  align-items: center;
-  display: inline-flex;
+  display: flex;
   border-radius: 2px;
   align-items: center;
+  position: relative;
+  top: 24px;
 }
 
 .header__cart {
@@ -255,6 +256,8 @@
   float: right;
   margin: 0;
   text-align: center;
+  position: relative;
+  top: 9px;
 }
 .header__cart-icon {
   color: var(--white-color);
