--- a/asset/css/nav_bar.css
+++ b/asset/css/nav_bar.css
@@ -37,8 +37,10 @@ body {
 }
 .navbar ul {
   margin-right: 20px;
-  display: inline-block;
+  /* display: inline-block; */
   /* padding-left: 50px; */
+  position: relative;
+  top: 26px;
 }
 .navbar ul li {
   display: inline-block;
@@ -59,17 +61,18 @@ body {
 .navbar ul ul {
   /* cố định các thẻ */
   position: absolute;
-  top: 90px;
+  top: 64px;
   border-top: 3px solid var(--second-color);
   opacity: 0;
   /* ẩn các sub menu */
   visibility: hidden;
-  margin-top: 15px;
+  margin-top: -24px;
+  margin-left: 14px;
   /* background-color: var(--primary-color); */
 }
 /* hover hiện submenu */
 .navbar ul li:hover > ul {
-  top: 70px;
+  /*top: 65px;*/
   opacity: 1;
   visibility: visible;
   transition: 0.3s linear;
@@ -125,17 +128,28 @@ body {
   padding: 0 118px;
   height: 70px;
 }
-
+.myul1{
+  left: -16px;
+  top: 94px;
+}
+.navbar-fixed .myul1{
+  left: -16px;
+  top: 80px;
+}
 .navbar-fixed .navbar ul ul {
-  top: 72px;
+  top: 50px;
   margin-top: -12px;
 }
+
 
 .grid-fixed {
   width: 100%;
   margin: 0 auto;
 }
-
+.main_nav{
+  display: flex;
+  justify-content: space-between;
+}
 @media screen and (max-width: 1483px) {
   .navbar-fixed {
     padding: 0 0;
@@ -155,8 +169,7 @@ body {
     padding-right: 12px;
   }
   .header__logo {
-    width: 350px;
-    padding-right: 30px;
+    margin-right: 30px;
   }
   .logo {
     padding-left: 0;
